--- a/index.html
+++ b/index.html
@@ -31,27 +31,25 @@
           <span class="badge-dot"></span>
           <span>Web-based AI Baybayin handwriting game</span>
         </div>
+
         <h1>Learn <span>Baybayin</span> the smart and fun way.</h1>
         <p class="hero-subtitle">
-          StrokeSense turns Baybayin handwriting into an interactive game.
-          Practice characters on any device while AI checks every stroke,
-          gives instant feedback, and keeps you motivated with levels,
-          badges, and challenges.
+          StrokeSense turns Baybayin handwriting into an interactive learning game with AI-powered feedback, challenges, and rewards.
         </p>
+
         <div class="hero-cta-group">
-          <button class="btn-primary">Start practicing now</button>
-          <button class="btn-outline">Watch how it works</button>
+          <a href="#cta" class="btn-primary">Start practicing now</a>
+          <a href="#visual" class="btn-outline">Watch how it works</a>
         </div>
+
         <div class="hero-meta">
           <span>
             <strong>Who it’s for</strong>
-            Students, teachers, heritage learners, and hobbyists who want to
-            write Baybayin confidently.
+            Students, teachers, heritage learners, and beginners.
           </span>
           <span>
             <strong>Main goal</strong>
-            Make Baybayin handwriting faster, easier, and more engaging than
-            traditional worksheets.
+            Make Baybayin handwriting easier, fun, and interactive.
           </span>
         </div>
       </div>
@@ -62,27 +60,29 @@
             <span class="hero-card-title">Today’s practice overview</span>
             <span class="status-pill">Session live</span>
           </div>
+
           <div class="hero-card-metrics">
             <div class="metric">
               <p class="metric-label">Characters practiced</p>
               <p class="metric-value">36</p>
             </div>
             <div class="metric">
-              <p class="metric-label">Stroke accuracy</p>
+              <p class="metric-label">Accuracy</p>
               <p class="metric-value">92%</p>
             </div>
             <div class="metric">
-              <p class="metric-label">Levels completed</p>
+              <p class="metric-label">Levels unlocked</p>
               <p class="metric-value">5</p>
             </div>
             <div class="metric">
-              <p class="metric-label">Badges unlocked</p>
+              <p class="metric-label">Badges earned</p>
               <p class="metric-value">3</p>
             </div>
           </div>
+
           <div class="hero-card-footer">
-            <span>AI feedback • Gamified learning • Cultural tips</span>
-            <span class="hero-tag">All in your browser</span>
+            <span>AI feedback • Gamified learning • Cultural notes</span>
+            <span class="hero-tag">All in-browser</span>
           </div>
         </div>
       </div>
@@ -92,70 +92,27 @@
   <section id="features" class="section features">
     <div class="container">
       <div class="section-header">
-        <p class="section-kicker">Key features</p>
-        <h2 class="section-title">Everything you need to master Baybayin</h2>
-        <p class="section-subtitle">
-          StrokeSense combines AI, gamification, and cultural notes so learning
-          doesn’t feel like memorizing a worksheet—it feels like playing a game
-          with purpose.
-        </p>
+        <p class="section-kicker">Key Features</p>
+        <h2 class="section-title features-title">Everything you need to master Baybayin</h2>
       </div>
 
       <div class="features-grid">
         <article class="feature-card">
           <div class="feature-icon">✍️</div>
-          <h3 class="feature-title">Interactive handwriting practice</h3>
-          <p class="feature-text">
-            Draw Baybayin characters with your mouse, stylus, or finger.
-            Each stroke is analyzed so you can correct your writing instantly.
-          </p>
+          <h3 class="feature-title">Interactive handwriting</h3>
+          <p class="feature-text">Draw Baybayin characters with AI-powered stroke analysis.</p>
         </article>
 
         <article class="feature-card">
           <div class="feature-icon">🎮</div>
-          <h3 class="feature-title">Gamified learning levels</h3>
-          <p class="feature-text">
-            Start with simple characters and progress to ligatures and
-            calligraphy styles as you unlock levels, quests, and mini
-            challenges.
-          </p>
+          <h3 class="feature-title">Gamified learning</h3>
+          <p class="feature-text">Levels, challenges, XP, badges, and rewards.</p>
         </article>
 
         <article class="feature-card">
           <div class="feature-icon">🤖</div>
-          <h3 class="feature-title">Personalized AI feedback</h3>
-          <p class="feature-text">
-            The system detects the strokes you struggle with and offers extra
-            practice for those characters while keeping confident learners
-            challenged.
-          </p>
-        </article>
-
-        <article class="feature-card">
-          <div class="feature-icon">📈</div>
-          <h3 class="feature-title">Progress tracking & rewards</h3>
-          <p class="feature-text">
-            View accuracy trends, session stats, and milestones. Celebrate new
-            badges and print certificates as you improve.
-          </p>
-        </article>
-
-        <article class="feature-card">
-          <div class="feature-icon">🏛️</div>
-          <h3 class="feature-title">Cultural insights</h3>
-          <p class="feature-text">
-            Each character includes short notes on its background and meaning,
-            helping you connect writing practice with Filipino heritage.
-          </p>
-        </article>
-
-        <article class="feature-card">
-          <div class="feature-icon">🌐</div>
-          <h3 class="feature-title">Accessible anytime, anywhere</h3>
-          <p class="feature-text">
-            Use StrokeSense on laptops, tablets, or touchscreens—perfect for
-            classrooms, homes, or cultural centers.
-          </p>
+          <h3 class="feature-title">AI Feedback</h3>
+          <p class="feature-text">Smart suggestions based on your stroke accuracy.</p>
         </article>
       </div>
     </div>
@@ -178,49 +135,24 @@
             <div class="stroke-box">
               <strong>Draw here</strong>
               <p style="margin-top:0.35rem; font-size:0.78rem;">
-                This area represents the handwriting canvas where users trace
-                Baybayin characters, stroke by stroke.
+                Users trace Baybayin strokes and receive instant feedback.
               </p>
             </div>
-            <span style="font-size:0.78rem; color:#9ca3af;">
-              Suggested devices: touchscreen laptop, tablet, or stylus-enabled
-              phone.
-            </span>
           </div>
 
           <div class="canvas-right">
             <span class="visual-pill">AI feedback</span>
-            <p>
-              After each attempt, StrokeSense highlights correct and incorrect
-              strokes, shows the ideal order, and suggests how to improve the
-              form.
-            </p>
-            <p>
-              You can replace this mockup with a real screenshot or illustration
-              of your interface once your prototype is ready.
-            </p>
+            <p>Improve your handwriting with real-time hints and corrections.</p>
+            <p>Replace this with a real screenshot when your prototype is ready.</p>
           </div>
         </div>
       </div>
 
       <div>
-        <div class="section-header" style="text-align:left; margin-bottom:1rem;">
-          <p class="section-kicker">Visual learning</p>
-          <h2 class="section-title" style="font-size:1.4rem;">
-            See your Baybayin writing come to life
-          </h2>
-        </div>
+        <h2 class="section-title" style="font-size:1.4rem;">See your Baybayin writing come to life</h2>
         <p style="font-size:0.93rem; color:var(--muted); margin-bottom:1rem;">
-          StrokeSense focuses on handwriting, not just recognition. Every
-          character is drawn, evaluated, and refined on screen, letting learners
-          build muscle memory the same way they would with pen and paper—only
-          smarter and more interactive.
+          Every stroke is analyzed visually so you learn proper form and writing flow.
         </p>
-        <ul style="font-size:0.9rem; color:var(--muted); padding-left:1.1rem; list-style:disc;">
-          <li>Use a clean, high-contrast canvas so strokes are easy to see.</li>
-          <li>Show hints, ghost outlines, or guides for beginners.</li>
-          <li>Reward accurate strokes with subtle animations and sounds.</li>
-        </ul>
       </div>
     </div>
   </section>
@@ -228,71 +160,40 @@
   <section id="details" class="section info">
     <div class="container info-layout">
       <div>
-        <div class="section-header" style="text-align:left; margin-bottom:1.2rem;">
-          <p class="section-kicker">How it works</p>
-          <h2 class="section-title" style="font-size:1.5rem;">
-            A simple flow for a powerful learning experience
-          </h2>
-          <p class="section-subtitle" style="margin:0; text-align:left;">
-            From sign-up to advanced calligraphy, StrokeSense guides learners
-            through a structured, gamified path that keeps them engaged.
-          </p>
-        </div>
-
+        <h2 class="section-title" style="font-size:1.5rem;">How it works</h2>
         <ul class="info-list">
           <li>
-            <p class="info-item-title">1. Sign up and choose your level</p>
-            <p class="info-item-desc">
-              Learners create an account, pick a starting level (beginner to
-              advanced), and get a short overview of Baybayin and its cultural
-              background.
-            </p>
+            <p class="info-item-title">Sign up and choose your level</p>
+            <p class="info-item-desc">Beginner-friendly levels and cultural notes included.</p>
           </li>
+
           <li>
-            <p class="info-item-title">2. Practice characters with live feedback</p>
-            <p class="info-item-desc">
-              Users draw characters directly on the canvas. AI checks stroke
-              order, angle, and proportions, giving visual hints on how to fix
-              mistakes in real time.
-            </p>
+            <p class="info-item-title">Practice characters</p>
+            <p class="info-item-desc">Learn proper stroke order and form.</p>
           </li>
+
           <li>
-            <p class="info-item-title">3. Progress through gamified levels</p>
-            <p class="info-item-desc">
-              As accuracy improves, learners unlock more complex characters,
-              ligatures, and calligraphy styles, earning points, badges, and
-              certificates along the way.
-            </p>
+            <p class="info-item-title">Unlock levels</p>
+            <p class="info-item-desc">Progress and earn badges as you improve.</p>
           </li>
+
           <li>
-            <p class="info-item-title">4. Track growth and revisit weak spots</p>
-            <p class="info-item-desc">
-              A dashboard summarizes accuracy, speed, and streaks. StrokeSense
-              suggests extra practice for characters that need more attention,
-              ensuring steady improvement.
-            </p>
+            <p class="info-item-title">Track growth</p>
+            <p class="info-item-desc">View accuracy trends and recommended practice tasks.</p>
           </li>
         </ul>
       </div>
 
       <aside class="info-highlight">
-        <h4>Who can benefit from StrokeSense?</h4>
-        <p>
-          StrokeSense is ideal for schools, individual learners, and cultural
-          organizations that want to keep Baybayin alive using modern tools.
-        </p>
+        <h4>Who benefits?</h4>
+        <p>Students, teachers, heritage learners, and hobbyists.</p>
 
-        <div class="pill-row" style="margin-bottom:0.7rem;">
-          <span class="pill">Students & teachers</span>
-          <span class="pill">Heritage learners abroad</span>
-          <span class="pill">Cultural centers & museums</span>
-          <span class="pill">Hobbyists & calligraphy fans</span>
+        <div class="pill-row">
+          <span class="pill">Students</span>
+          <span class="pill">Teachers</span>
+          <span class="pill">Cultural centers</span>
+          <span class="pill">Hobbyists</span>
         </div>
-
-        <p style="margin-bottom:0.4rem;">
-          Whether you’re just starting or refining your handwriting, StrokeSense
-          offers a guided, motivating path to mastering this historic script.
-        </p>
       </aside>
     </div>
   </section>
@@ -301,16 +202,12 @@
     <div class="container">
       <div class="cta-box">
         <div>
-          <h2 class="cta-title">Ready to keep Baybayin alive—one stroke at a time?</h2>
-          <p class="cta-text">
-            Join StrokeSense and experience a new way to practice Baybayin
-            handwriting with AI feedback, game mechanics, and cultural context
-            built in.
-          </p>
+          <h2 class="cta-title">Ready to begin your Baybayin journey?</h2>
+          <p class="cta-text">Start learning with AI-powered handwriting guidance.</p>
         </div>
         <div class="cta-actions">
-          <button class="btn-primary">Create your free account</button>
-          <button class="btn-ghost">Try a demo session</button>
+          <a href="#" class="btn-primary">Create your free account</a>
+          <a href="#" class="btn-ghost">Try demo</a>
         </div>
       </div>
     </div>
@@ -321,10 +218,8 @@
       <div class="footer-top">
         <div>
           <p class="footer-brand">StrokeSense</p>
-          <p>
-            A web-based Baybayin handwriting experience that blends AI,
-            gamification, and culture to make every stroke meaningful.
-          </p>
+          <p>A modern Baybayin handwriting experience.</p>
+
           <div class="socials">
             <a href="#">GitHub</a>
             <a href="#">Portfolio</a>
@@ -339,21 +234,12 @@
             <li><a href="#features">Features</a></li>
             <li><a href="#details">How it works</a></li>
           </ul>
-          <ul>
-            <strong>For</strong>
-            <li>Students & Teachers</li>
-            <li>Heritage Learners</li>
-            <li>Cultural Partners</li>
-          </ul>
         </div>
       </div>
 
       <div class="footer-bottom">
-        <span>© 2025 StrokeSense · Case Study Landing Page</span>
-        <span>
-          <a href="#">Accessibility</a> •
-          <a href="#">Privacy</a>
-        </span>
+        <span>© 2025 StrokeSense</span>
+        <span><a href="#">Privacy</a></span>
       </div>
     </div>
   </footer>
